@@ -9,6 +9,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2016-11-21 b3rs3rk
+	Chg: Avoid joining groups table on CBP deletes by selecting group info beforehand
 2016-11-17 niel
 	Mrg: PR 2313, from  Wally73 - Update simple-expanded.sh. Removes update_theaters as Rotten
 		Tomoato's API is no longer freely available.
